# ec_main_app

./: CMakeLists.txt  README.md
conf/: king.json
lib/ffmpeg/lib/: libavdevice.so.57.6.100  libavformat.so.57.71.100  libavutil.so.55  libswresample.so.2.7.100  libswscale.so.4.6.100
lib/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib/freetype/lib/: libfreetype.la  libfreetype.so.6
lib/freetype/lib/pkgconfig/: freetype2.pc
lib/hisi_10/inc/: aacdec.h  hi_awb_comm.h  hi_comm_venc.h  hi_comm_vi.h  hi_comm_video.h  hi_comm_vpss.h  hi_debug.h  hi_defines.h  hi_math.h  hi_mipi.h  mod_ext.h  mpi_isp.h  mpi_vi.h
lib/hisi_10/src/: sample_comm.h  sample_comm_audio.c  sample_comm_isp.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vi.c.bak  sample_comm_vpss.c
lib/hisi_10/src_libsns_ov2718/: sample_comm_audio.c  sample_comm_isp.c  sample_comm_ive.c  sample_comm_ive.h  sample_comm_venc.c
lib/hisi_11/inc/: hi_comm_3a.h  hi_comm_aio.h  hi_comm_isp.h  hi_comm_sns.h  hi_isp_bin.h  mpi_ive.h
lib/hisi_11/src/: CMakeLists.txt  sample_comm.h  sample_comm_audio.c  sample_comm_sys.c  sample_comm_venc.c
lib/hisi_40/inc/: hi_ae_comm.h  hi_comm_adec.h  hi_comm_isp.h  hi_comm_rc.h  hi_comm_sns.h  hi_comm_vi.h  hi_ive.h  mpi_isp.h  mpi_vi.h  vou_exp.h
lib/hisi_50/inc/: acodec.h  hi_awb_comm.h  hi_comm_3a.h  hi_comm_aenc.h  hi_comm_aio.h  hi_comm_isp.h  hi_comm_rc.h  hi_comm_region.h  hi_comm_sns.h  hi_comm_vi.h  hi_comm_vo.h  mpi_ai.h  mpi_ao.h  mpi_awb.h  mpi_vo.h
lib/libaac/lib/: libfaac.la  libfaac.so.0.0.0
lib/libghttp/lib/: ghttpConf.sh  libghttp.la
lib/libmp4/include/mp4v2/: project.h
lib/libmp4/lib/: libmp4v2.la
lib/libsdl/include/SDL2/: SDL_config.h
lib/libsdl/lib/: libSDL2-2.0.so.0.4.1  libSDL2.la
lib/libsdl/lib/cmake/SDL2/: sdl2-config.cmake
lib/libsdl/lib/pkgconfig/: SDL2_ttf.pc  sdl2.pc
lib/libsdl_ttf/lib/: libSDL2_ttf-2.0.so.0.14.0  libSDL2_ttf.la
lib/sqlite/lib/pkgconfig/: sqlite3.pc
lib/sqlite/sqlite-autoconf-3210000/: Makefile  config.status  config.sub  libtool  sqlite3
lib/sqlite/sqlite-autoconf-3210000/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
lib/sqlite/sqlite-autoconf-3210000/.libs/: libsqlite3.la  libsqlite3.lai  libsqlite3.so.0.8.6
src/: king_main.c
src/3th_src/: rs232.c  rs232.h
src/alarm/: ec_alarm.c  ec_alarm.h
src/auth/: ec_auth.c  ec_auth.h
src/beep/: ec_beep.c  ec_beep.h
src/button/: ec_btn_alarm.c  ec_btn_alarm.h  ec_btn_charge.c  ec_btn_charge.h  ec_btn_comm.c  ec_btn_comm.h  ec_btn_conf.h  ec_btn_snap.c  ec_btn_snap.h  ec_btn_wifi.c  ec_btn_wifi.h
src/common/: ec_define.h
src/conf/: ec_conf.c  ec_conf.h  ec_version.h
src/dev_stat/: ec_dev_stat.c  ec_dev_stat.h  ec_dev_state_define.h
src/disk_manager/: ec_disk_monitor.c  ec_disk_monitor.h  ec_usb_disk.c  ec_usb_disk.h
src/eeprom/: ec_eeprom.c  ec_eeprom.h  ec_eeprom_test.c
src/event/: ec_event.c  ec_event.h  ec_event_define.h
src/gpio/: ec_gpio.c  ec_gpio.h
src/i2c/: ec_iic_priv.c  ec_iic_priv.h
src/led/: ec_led.c  ec_led.h  ec_led_alg.h
src/libuv_wraper/: ec_libuv.c  ec_libuv.h
src/log/: ec_log.c  ec_log.h
src/module_manager/: ec_module.c  ec_module.h
src/power_manager/: ec_power.c  ec_power.h
src/power_manager/battery/: ec_lsadc.c  ec_lsadc.h
src/pwm/: hi_pwm.c  hi_pwm.h
src/recoder_manager/: ec_recode_worker.c  ec_recode_worker.h  ec_recoder_rotator.c  ec_recoder_rotator.h  ec_record.c  ec_record.h  ec_record_mp4.c  ec_record_mp4.h  ec_recorde_alarm.c  ec_recorde_alarm.h
src/rtc/: ec_rtc.c  ec_rtc.h
src/sdk/: ec_hisi_sdk.c  ec_hisi_sdk.h  ec_hisi_sdk_conf.h  ec_hisi_sdk_live.c  ec_hisi_sdk_live.h  ec_hisi_sdk_recorder.c  ec_hisi_sdk_recorder.h  ec_hisi_sdk_snap.c  ec_hisi_sdk_snap.h  ec_osd.c  ec_osd.h
src/sdk/hisi_11/: aacenc.h  memmap.c  memmap.h  sample_comm.h  sample_comm_audio.c  sample_comm_isp.c  sample_comm_venc.c  sample_comm_vpss.c
src/sdk/hisi_40/: audio_aac_adp.h  memmap.c  sample_comm.h  sample_comm_audio.c  sample_comm_isp.c  sample_comm_ive.c  sample_comm_sys.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vo.c
src/sdk/hisi_50/: audio_aac_adp.c  memmap.c  sample_comm.h  sample_comm_audio.c  sample_comm_isp.c  sample_comm_ive.c  sample_comm_ive.h  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vpss.c
src/signal/: ec_signal.c  ec_signal.h
src/snap/: ec_snap.c  ec_snap.h
src/stream_manager/: ec_stream.c  ec_stream.h  ec_stream_test.c  ec_stream_worker.c  ec_stream_worker.h  srs_librtmp.h
src/utils/: ec_ko.c  ec_ko.h  ec_reg.c  ec_reg.h  ec_utils.c  ec_utils.h
src/wifi/: ec_wifi.c  ec_wifi.h
